# SignalGraph

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.py
artifacts/: .gitkeep  eval_results.json  failure_cases.json  generation_quality.json  retrieval_comparison.csv  retrieval_quality.json  system_health.json  which-graphrag-implementation-should-a-startup-evaluate-first-citations.csv  which-graphrag-implementation-should-a-startup-evaluate-first-decision-memo.json
artifacts/cypher/: evidence_path_queries.cypher  signalgraph_export.cypher
artifacts/graph/: community_reports.json  signalgraph_graph.json
artifacts/traces/: eval_query_traces.jsonl
data/: .gitkeep
data/eval/: signalgraph_eval_corpus.json
data/normalized/: corpus.json
data/raw/: source_records.jsonl
reports/: .gitkeep  eval_summary.md  failure_cases.csv  failure_cases.md  generation_quality.csv  generation_quality.md  retrieval_quality.csv  retrieval_quality.md  system_health.md
reports/decision_memos/: which-graphrag-implementation-should-a-startup-evaluate-first.md
src/signalgraph/: __init__.py  answering.py  cli.py  community.py  config.py  cypher_templates.py  embeddings.py  entity_resolution.py  evaluation.py  extraction.py  graph.py  ingest.py  models.py  neo4j_loader.py  normalization.py  providers.py  quality.py  reports.py  rerank.py  retrieval.py  (+4 more)
tests/: conftest.py  test_cli.py  test_extraction_entity_quality.py  test_graph_retrieval_eval_reports.py  test_neo4j_embeddings_cypher.py  test_sources_and_storage.py  test_wu005_retrieval_depth.py
