[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signalgraph"
version = "0.1.0"
description = "Engine-first GraphRAG technical intelligence platform for research-to-production decisions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SignalGraph Contributors" }]
keywords = ["graphrag", "knowledge-graph", "retrieval", "arxiv", "openalex", "github"]
dependencies = []

[project.scripts]
signalgraph = "signalgraph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
